[RED] Add tests for async OrderServiceImpl