@@ -1,12 +1,13 @@
 package id.ac.ui.cs.advprog.order.service;
 
+import id.ac.ui.cs.advprog.order.dto.OrderListResponseDTO;
 import id.ac.ui.cs.advprog.order.dto.OrderRequestDTO;
 import id.ac.ui.cs.advprog.order.dto.OrderResponseDTO;
-import id.ac.ui.cs.advprog.order.dto.OrderListResponseDTO;
-import id.ac.ui.cs.advprog.order.dto.UpdateOrderRequestDTO;
 import id.ac.ui.cs.advprog.order.dto.ResponseDTO;
+import id.ac.ui.cs.advprog.order.dto.UpdateOrderRequestDTO;
 import id.ac.ui.cs.advprog.order.enums.OrderStatus;
 import id.ac.ui.cs.advprog.order.model.Order;
+import id.ac.ui.cs.advprog.order.model.OrderBuilder;
 import id.ac.ui.cs.advprog.order.repository.OrderRepository;
 import jakarta.persistence.EntityNotFoundException;
 import org.junit.jupiter.api.BeforeEach;
@@ -14,229 +15,243 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
+import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.time.LocalDateTime;
-import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
+import java.util.concurrent.CompletableFuture;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.*;
 
 @ExtendWith(MockitoExtension.class)
-public class OrderServiceImplTest {
-
-    @Mock
-    private OrderRepository orderRepository;
+class OrderServiceImplTest {
 
     @InjectMocks
     private OrderServiceImpl orderService;
 
-    private UUID orderId;
+    @Mock
+    private OrderRepository orderRepository;
+
+    private OrderRequestDTO requestDto;
+    private UpdateOrderRequestDTO updateDto;
+    private OrderBuilder orderBuilder;
     private UUID customerId;
-    private UUID technicianId;
+    private UUID paymentMethodId;
+    private UUID couponId;
     private Date serviceDate;
-    private Order pendingOrder;
-    private Order approvedOrder;
-    private OrderRequestDTO orderRequestDTO;
-    private UpdateOrderRequestDTO updateOrderRequestDTO;
-    private UUID bankTransferPaymentId;
-    private UUID creditCardPaymentId;
 
     @BeforeEach
     void setUp() {
-        orderId = UUID.randomUUID();
         customerId = UUID.randomUUID();
-        technicianId = UUID.randomUUID();
+        paymentMethodId = UUID.randomUUID();
+        couponId = UUID.randomUUID();
         serviceDate = new Date();
-        LocalDateTime now = LocalDateTime.now();
-        bankTransferPaymentId = UUID.fromString("0000a456-4002-4567-e89b-0000000012d3");
-        creditCardPaymentId = UUID.fromString("123e4567-e89b-12d3-a456-426614174002");
 
-        pendingOrder = new Order();
-        pendingOrder.setId(orderId);
-        pendingOrder.setCustomerId(customerId);
-        pendingOrder.setTechnicianId(technicianId);
-        pendingOrder.setItemName("Dell XPS 15 9500");
-        pendingOrder.setItemCondition("OLED display cracked with visible impact marks at bottom-right corner");
-        pendingOrder.setRepairDetails("Matrix failure on 40% of screen area caused by physical impact - requires full panel replacement");
-        pendingOrder.setServiceDate(serviceDate);
-        pendingOrder.setStatus(OrderStatus.PENDING);
-        pendingOrder.setCreatedAt(now);
-        pendingOrder.setUpdatedAt(now);
-        pendingOrder.setPaymentMethodId(bankTransferPaymentId);
+        this.orderBuilder = new OrderBuilder()
+                .setCustomerId(customerId)
+                .setItemName("MacBook Pro 16-inch M2")
+                .setItemCondition("Brand new, still in warranty")
+                .setRepairDetails("Battery drains rapidly and trackpad is unresponsive")
+                .setServiceDate(serviceDate)
+                .setPaymentMethodId(paymentMethodId)
+                .setCouponId(couponId);
 
-        approvedOrder = new Order();
-        approvedOrder.setId(UUID.randomUUID());
-        approvedOrder.setCustomerId(customerId);
-        approvedOrder.setTechnicianId(technicianId);
-        approvedOrder.setItemName("iPhone 14 Pro Max");
-        approvedOrder.setItemCondition("Severe liquid damage with corrosion on logic board");
-        approvedOrder.setRepairDetails("Device boots to Apple logo then shuts down - diagnosed with short circuit in power management IC");
-        approvedOrder.setServiceDate(serviceDate);
-        approvedOrder.setStatus(OrderStatus.APPROVED);
-        approvedOrder.setCreatedAt(now);
-        approvedOrder.setUpdatedAt(now);
-        approvedOrder.setPaymentMethodId(creditCardPaymentId);
+        this.requestDto = OrderRequestDTO.builder()
+                .customerId(customerId)
+                .itemName("MacBook Pro 16-inch M2")
+                .itemCondition("Brand new, still in warranty")
+                .repairDetails("Battery drains rapidly and trackpad is unresponsive")
+                .serviceDate(serviceDate)
+                .paymentMethodId(paymentMethodId)
+                .couponId(couponId)
+                .build();
 
-        orderRequestDTO = new OrderRequestDTO();
-        orderRequestDTO.setCustomerId(customerId);
-        orderRequestDTO.setTechnicianId(technicianId);
-        orderRequestDTO.setItemName("Lenovo ThinkPad P1 Gen 5");
-        orderRequestDTO.setItemCondition("Faulty keyboard with multiple unresponsive keys (E, R, T)");
-        orderRequestDTO.setRepairDetails("Mechanical failure in keyboard flex cable due to repeated stress - requires full keyboard assembly replacement");
-        orderRequestDTO.setServiceDate(serviceDate);
-        orderRequestDTO.setPaymentMethodId(bankTransferPaymentId);
-
-        updateOrderRequestDTO = new UpdateOrderRequestDTO();
-        updateOrderRequestDTO.setItemName("MacBook Pro M2 2023");
-        updateOrderRequestDTO.setItemCondition("Liquid damage on both keyboard and trackpad");
-        updateOrderRequestDTO.setRepairDetails("Corrosion detected in keyboard backlight circuit and trackpad flex connector - full disassembly required for cleaning and component replacement");
-        updateOrderRequestDTO.setServiceDate(serviceDate);
-        updateOrderRequestDTO.setTechnicianId(UUID.randomUUID());
-        updateOrderRequestDTO.setPaymentMethodId(creditCardPaymentId);
+        this.updateDto = UpdateOrderRequestDTO.builder()
+                .itemName("Dell XPS 15 9520")
+                .itemCondition("Used for 8 months, good condition overall")
+                .build();
     }
 
     @Test
-    void testCreateOrder_Success() {
-        when(orderRepository.save(any(Order.class))).thenReturn(pendingOrder);
+    void testCreateOrder() throws Exception {
+        Order order = orderBuilder.build();
+        Mockito.when(orderRepository.save(Mockito.any(Order.class))).thenReturn(order);
 
-        OrderResponseDTO response = orderService.createOrder(orderRequestDTO);
+        CompletableFuture<OrderResponseDTO> future = orderService.createOrder(requestDto);
+        OrderResponseDTO dto = future.get();
 
-        assertNotNull(response);
-        assertEquals(orderId, response.getId());
-        assertEquals(customerId, response.getCustomerId());
-        assertEquals(technicianId, response.getTechnicianId());
-        assertEquals("Dell XPS 15 9500", response.getItemName());
-        assertEquals("OLED display cracked with visible impact marks at bottom-right corner", response.getItemCondition());
-        assertEquals("Matrix failure on 40% of screen area caused by physical impact - requires full panel replacement", response.getRepairDetails());
-        assertEquals(serviceDate, response.getServiceDate());
-        assertEquals(OrderStatus.PENDING, response.getStatus());
-        assertEquals(bankTransferPaymentId, response.getPaymentMethodId());
-
-        verify(orderRepository, times(1)).save(any(Order.class));
+        assertNotNull(dto);
+        assertEquals(order.getId(), dto.getId());
+        assertEquals(order.getItemName(), dto.getItemName());
+        Mockito.verify(orderRepository).save(Mockito.any(Order.class));
     }
 
     @Test
-    void testGetOrderById_Success() {
-        when(orderRepository.findById(orderId)).thenReturn(Optional.of(pendingOrder));
+    void testGetOrderById_Success() throws Exception {
+        Order order = orderBuilder.build();
+        UUID id = order.getId();
+        Mockito.when(orderRepository.findById(id)).thenReturn(Optional.of(order));
 
-        OrderResponseDTO response = orderService.getOrderById(orderId);
+        CompletableFuture<OrderResponseDTO> future = orderService.getOrderById(id);
+        OrderResponseDTO dto = future.get();
 
-        assertNotNull(response);
-        assertEquals(orderId, response.getId());
-        assertEquals(customerId, response.getCustomerId());
-        assertEquals("Dell XPS 15 9500", response.getItemName());
-        assertEquals(OrderStatus.PENDING, response.getStatus());
-
-        verify(orderRepository, times(1)).findById(orderId);
+        assertEquals(id, dto.getId());
+        assertEquals(order.getCustomerId(), dto.getCustomerId());
     }
 
     @Test
     void testGetOrderById_NotFound() {
-        UUID nonExistentId = UUID.randomUUID();
-        when(orderRepository.findById(nonExistentId)).thenReturn(Optional.empty());
+        UUID nonExistentOrderId = UUID.randomUUID();
+        Mockito.when(orderRepository.findById(nonExistentOrderId)).thenReturn(Optional.empty());
 
-        assertThrows(EntityNotFoundException.class, () -> orderService.getOrderById(nonExistentId));
-        verify(orderRepository, times(1)).findById(nonExistentId);
+        assertThrows(EntityNotFoundException.class, () ->
+                orderService.getOrderById(nonExistentOrderId).join()
+        );
     }
 
     @Test
-    void testGetOrdersByCustomerId_Success() {
-        List<Order> orders = Arrays.asList(pendingOrder, approvedOrder);
-        when(orderRepository.findByCustomerId(customerId)).thenReturn(orders);
+    void testGetOrdersByCustomerId() throws Exception {
+        Order order1 = orderBuilder.build();
+        Order order2 = orderBuilder.setItemName("iPhone 14 Pro Max").build();
+        Mockito.when(orderRepository.findByCustomerId(customerId))
+                .thenReturn(List.of(order1, order2));
 
-        OrderListResponseDTO response = orderService.getOrdersByCustomerId(customerId);
+        CompletableFuture<OrderListResponseDTO> future = orderService.getOrdersByCustomerId(customerId);
+        OrderListResponseDTO listDto = future.get();
 
-        assertNotNull(response);
-        assertEquals(2, response.getCount());
-        assertEquals(2, response.getOrders().size());
-        assertEquals(orderId, response.getOrders().get(0).getId());
-        assertEquals("Dell XPS 15 9500", response.getOrders().get(0).getItemName());
-        assertEquals("iPhone 14 Pro Max", response.getOrders().get(1).getItemName());
-
-        verify(orderRepository, times(1)).findByCustomerId(customerId);
+        assertEquals(2, listDto.getCount());
+        assertThat(listDto.getOrders()).extracting(OrderResponseDTO::getId)
+                .containsExactly(order1.getId(), order2.getId());
     }
 
     @Test
-    void testUpdateOrder_Success() {
-        when(orderRepository.findById(orderId)).thenReturn(Optional.of(pendingOrder));
-        when(orderRepository.save(any(Order.class))).thenReturn(pendingOrder);
+    void testFindAll() throws Exception {
+        Order order1 = orderBuilder.build();
+        Order order2 = orderBuilder.setItemName("Samsung Galaxy S23 Ultra").build();
+        Mockito.when(orderRepository.findAll()).thenReturn(List.of(order1, order2));
 
-        OrderResponseDTO response = orderService.updateOrder(orderId, updateOrderRequestDTO);
+        CompletableFuture<List<OrderResponseDTO>> future = orderService.getAll();
+        List<OrderResponseDTO> dtos = future.get();
 
-        assertNotNull(response);
-        assertEquals(orderId, response.getId());
-        assertEquals("MacBook Pro M2 2023", response.getItemName());
-        assertEquals("Liquid damage on both keyboard and trackpad", response.getItemCondition());
-        assertEquals("Corrosion detected in keyboard backlight circuit and trackpad flex connector - full disassembly required for cleaning and component replacement", response.getRepairDetails());
-        assertEquals(updateOrderRequestDTO.getTechnicianId(), response.getTechnicianId());
-        assertEquals(bankTransferPaymentId, response.getPaymentMethodId());
+        assertEquals(2, dtos.size());
+        assertThat(dtos).extracting(OrderResponseDTO::getItemName)
+                .containsExactly(order1.getItemName(), order2.getItemName());
+    }
 
-        verify(orderRepository, times(1)).findById(orderId);
-        verify(orderRepository, times(1)).save(any(Order.class));
+    @Test
+    void testUpdateOrder_Success() throws Exception {
+        Order existingOrder = orderBuilder.build();
+        UUID orderId = existingOrder.getId();
+        Mockito.when(orderRepository.findById(orderId)).thenReturn(Optional.of(existingOrder));
+        Mockito.when(orderRepository.save(existingOrder)).thenReturn(existingOrder);
+
+        CompletableFuture<OrderResponseDTO> future = orderService.updateOrder(orderId, updateDto);
+        OrderResponseDTO dto = future.get();
+
+        assertEquals("Dell XPS 15 9520", dto.getItemName());
+        assertEquals("Used for 8 months, good condition overall", dto.getItemCondition());
+    }
+
+    @Test
+    void testUpdateOrder_PreservesOtherFields() throws Exception {
+        Order existingOrder = orderBuilder.build();
+        UUID orderId = existingOrder.getId();
+        String originalRepairDetails = existingOrder.getRepairDetails();
+        UUID originalCouponId = existingOrder.getCouponId();
+        Mockito.when(orderRepository.findById(orderId)).thenReturn(Optional.of(existingOrder));
+        Mockito.when(orderRepository.save(existingOrder)).thenReturn(existingOrder);
+
+        CompletableFuture<OrderResponseDTO> future = orderService.updateOrder(orderId, updateDto);
+        OrderResponseDTO dto = future.get();
+
+        assertEquals("Dell XPS 15 9520", dto.getItemName());
+        assertEquals("Used for 8 months, good condition overall", dto.getItemCondition());
+        assertEquals(originalRepairDetails, dto.getRepairDetails());
+        assertEquals(originalCouponId, dto.getCouponId());
     }
 
     @Test
     void testUpdateOrder_NotFound() {
-        UUID nonExistentId = UUID.randomUUID();
-        when(orderRepository.findById(nonExistentId)).thenReturn(Optional.empty());
+        UUID nonExistentOrderId = UUID.randomUUID();
+        Mockito.when(orderRepository.findById(nonExistentOrderId)).thenReturn(Optional.empty());
 
-        assertThrows(EntityNotFoundException.class, () -> orderService.updateOrder(nonExistentId, updateOrderRequestDTO));
-        verify(orderRepository, times(1)).findById(nonExistentId);
-        verify(orderRepository, never()).save(any(Order.class));
+        assertThrows(EntityNotFoundException.class, () ->
+                orderService.updateOrder(nonExistentOrderId, updateDto).join()
+        );
     }
 
     @Test
-    void testUpdateOrder_AlreadyApproved() {
-        UUID approvedOrderId = approvedOrder.getId();
-        when(orderRepository.findById(approvedOrderId)).thenReturn(Optional.of(approvedOrder));
+    void testCancelOrder_Success() throws Exception {
+        Order existingOrder = orderBuilder.build();
+        UUID orderId = existingOrder.getId();
+        Mockito.when(orderRepository.findById(orderId)).thenReturn(Optional.of(existingOrder));
+        Mockito.when(orderRepository.save(existingOrder)).thenReturn(existingOrder);
 
-        assertThrows(IllegalStateException.class, () -> orderService.updateOrder(approvedOrderId, updateOrderRequestDTO));
-        verify(orderRepository, times(1)).findById(approvedOrderId);
-        verify(orderRepository, never()).save(any(Order.class));
-    }
+        CompletableFuture<ResponseDTO> future = orderService.cancelOrder(orderId);
+        ResponseDTO response = future.get();
 
-    @Test
-    void testCancelOrder_Success() {
-        when(orderRepository.findById(orderId)).thenReturn(Optional.of(pendingOrder));
-        when(orderRepository.save(any(Order.class))).thenReturn(pendingOrder);
-
-        ResponseDTO response = orderService.cancelOrder(orderId);
-
-        assertNotNull(response);
         assertTrue(response.isSuccess());
         assertEquals("Order has been successfully cancelled", response.getMessage());
-        assertEquals(OrderStatus.CANCELLED, pendingOrder.getStatus());
-
-        verify(orderRepository, times(1)).findById(orderId);
-        verify(orderRepository, times(1)).save(pendingOrder);
+        assertEquals(OrderStatus.CANCELLED, existingOrder.getStatus());
     }
 
     @Test
     void testCancelOrder_NotFound() {
-        UUID nonExistentId = UUID.randomUUID();
-        when(orderRepository.findById(nonExistentId)).thenReturn(Optional.empty());
+        UUID nonExistentOrderId = UUID.randomUUID();
+        Mockito.when(orderRepository.findById(nonExistentOrderId)).thenReturn(Optional.empty());
 
-        assertThrows(EntityNotFoundException.class, () -> orderService.cancelOrder(nonExistentId));
-        verify(orderRepository, times(1)).findById(nonExistentId);
-        verify(orderRepository, never()).save(any(Order.class));
+        assertThrows(EntityNotFoundException.class, () ->
+                orderService.cancelOrder(nonExistentOrderId).join()
+        );
     }
 
-    @Test
-    void testCancelOrder_AlreadyApproved() {
-        UUID approvedOrderId = approvedOrder.getId();
-        when(orderRepository.findById(approvedOrderId)).thenReturn(Optional.of(approvedOrder));
 
-        assertThrows(IllegalStateException.class, () -> orderService.cancelOrder(approvedOrderId));
-        verify(orderRepository, times(1)).findById(approvedOrderId);
-        verify(orderRepository, never()).save(any(Order.class));
+    @Test
+    void testUpdateOrder_AllFieldsUpdate() throws Exception {
+        Order existingOrder = orderBuilder.build();
+        UUID orderId = existingOrder.getId();
+        Mockito.when(orderRepository.findById(orderId)).thenReturn(Optional.of(existingOrder));
+
+        UUID newTechnicianId = UUID.randomUUID();
+        UUID newPaymentMethodId = UUID.randomUUID();
+        UUID newCouponId = UUID.randomUUID();
+        Date newServiceDate = new Date(123456789L);
+        String newEstimatedCompletionTime = "2025-02-15T14:30:00";
+        Double newEstimatedPrice = 275.50;
+        Double newFinalPrice = 320.75;
+        String newRepairDetails = "Complete logic board replacement and SSD upgrade to 1TB";
+
+        UpdateOrderRequestDTO completeUpdateRequest = UpdateOrderRequestDTO.builder()
+                .itemName("ASUS ROG Strix Gaming Laptop")
+                .itemCondition("Refurbished with 6-month warranty")
+                .repairDetails(newRepairDetails)
+                .serviceDate(newServiceDate)
+                .technicianId(newTechnicianId)
+                .paymentMethodId(newPaymentMethodId)
+                .couponId(newCouponId)
+                .estimatedCompletionTime(newEstimatedCompletionTime)
+                .estimatedPrice(newEstimatedPrice)
+                .finalPrice(newFinalPrice)
+                .build();
+
+        Mockito.when(orderRepository.save(Mockito.any(Order.class)))
+                .thenAnswer(invocation -> invocation.getArgument(0, Order.class));
+
+        OrderResponseDTO resultDto = orderService.updateOrder(orderId, completeUpdateRequest).get();
+
+        assertEquals("ASUS ROG Strix Gaming Laptop", resultDto.getItemName());
+        assertEquals("Refurbished with 6-month warranty", resultDto.getItemCondition());
+        assertEquals(newRepairDetails, resultDto.getRepairDetails());
+        assertEquals(newServiceDate, resultDto.getServiceDate());
+        assertEquals(newTechnicianId, resultDto.getTechnicianId());
+        assertEquals(newPaymentMethodId, resultDto.getPaymentMethodId());
+        assertEquals(newCouponId, resultDto.getCouponId());
+        assertEquals(newEstimatedCompletionTime, resultDto.getEstimatedCompletionTime());
+        assertEquals(newEstimatedPrice, resultDto.getEstimatedPrice());
+        assertEquals(newFinalPrice, resultDto.getFinalPrice());
     }
 }
